[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/theme/tres2/Button.tres" type="Theme" id=1]
[ext_resource path="res://src/MainMenu/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/image/ui/Play.png" type="Texture" id=3]
[ext_resource path="res://src/MainMenu/Main.gd" type="Script" id=4]
[ext_resource path="res://assets/image/ui/Setting.png" type="Texture" id=5]
[ext_resource path="res://assets/image/ui/Book.png" type="Texture" id=6]
[ext_resource path="res://src/MainMenu/test.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = 400.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.22

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, -5.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[node name="Menu" type="Node2D"]
position = Vector2( -150.506, -56.7592 )
script = ExtResource( 4 )

[node name="BG" parent="." instance=ExtResource( 2 )]

[node name="Tabs" type="Tabs" parent="."]
margin_left = -173.982
margin_top = 51.6333
margin_right = 1.0184
margin_bottom = 135.633
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Tabs"]
self_modulate = Color( 0.247059, 0.713726, 0.0941176, 1 )
anchor_left = -0.860034
anchor_top = -0.675707
anchor_right = -0.860034
anchor_bottom = -0.675707
margin_left = 882.129
margin_top = 518.848
margin_right = 1058.13
margin_bottom = 606.848
rect_scale = Vector2( 1.02098, 1.02098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRectShado" type="TextureRect" parent="Tabs/PlayButton"]
modulate = Color( 0.145098, 0.462745, 0.0431373, 1 )
margin_left = 68.1704
margin_top = 18.0774
margin_right = 324.17
margin_bottom = 274.077
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Tabs/PlayButton"]
margin_left = 59.6934
margin_top = 18.3564
margin_right = 315.693
margin_bottom = 274.357
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tabs/PlayButton"]
playback_speed = 0.4
anims/PlayButtonPlay = SubResource( 1 )

[node name="SettingButton" type="Button" parent="Tabs"]
anchor_left = -0.860033
anchor_top = -0.675707
anchor_right = -0.860033
anchor_bottom = -0.675707
margin_left = 1379.74
margin_top = 542.325
margin_right = 1459.74
margin_bottom = 622.325
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Tabs/SettingButton"]
visible = false
modulate = Color( 0, 0.466667, 0.713726, 1 )
anchor_left = 0.187
anchor_top = 0.175
anchor_right = 0.187
anchor_bottom = 0.175
margin_left = 0.039999
margin_top = 0.177978
margin_right = 256.04
margin_bottom = 256.178
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setting" type="Particles2D" parent="Tabs/SettingButton"]
modulate = Color( 0, 0.466667, 0.713726, 1 )
position = Vector2( 40.3265, 37.558 )
amount = 1
lifetime = 0.1
speed_scale = 0.5
process_material = SubResource( 2 )
texture = ExtResource( 5 )

[node name="HowToPlayButton" type="Button" parent="Tabs"]
anchor_left = -0.860033
anchor_top = -0.675707
anchor_right = -0.860033
anchor_bottom = -0.675707
margin_left = 1379.74
margin_top = 436.325
margin_right = 1459.74
margin_bottom = 516.325
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Tabs/HowToPlayButton"]
modulate = Color( 0, 0.466667, 0.713726, 1 )
margin_left = 16.0
margin_top = 15.0
margin_right = 272.0
margin_bottom = 271.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tabs/HowToPlayButton"]
anims/HotToPlay = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="pressed" from="Tabs/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Tabs/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="Tabs/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
